[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.pylint]
disable = [
    "C0103", # (invalid-name)
    "C0114", # (missing-module-docstring)
    "C0115", # (missing-class-docstring)
    "C0116", # (missing-function-docstring)
    "R0903", # (too-few-public-methods)
    "R0913", # (too-many-arguments)
    "R0801", # (similar-lines)
    "W1203", # (logging-fstring-interpolation)
    "W0107", # (pass-statement)
    "R0902",
    "C0301", # (line-too-long)
]
[tool.pylint.LOGGING]
logging-format-style = "new"

[tool.pytest.ini_options]
addopts = "--verbose --doctest-modules --ignore=openant/subparsers/influx.py"
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL"
testpaths = "openant"
